# CourseBot

./: # Changelog.md  .gitignore  CHANGELOG.md  CourseTracker.spec  README.md  ROADMAP.md  app.py  capacitor.config.json  course_report.txt  course_tracker.db  courses.db  database.py  generate_test_data.py  main.js  main.py  package-lock.json  package.json  preload.js  pyproject.toml  report_generator.py  requirements.txt  test_courses.csv  testfile.csv
android/app/: build.gradle
android/app/src/main/java/com/coursetrak/: MainActivity.java
android/app/src/main/res/values/: strings.xml
data/: database.py
db/: operations.js  setup.js
desktop/: courses.db  report_generator.py
desktop/data/: database.py
desktop/ui/: app.py
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
mobile/: ROADMAP.md  main.py
public/: index.html
src/: App.js  add_course.py  dashboard.py  database.py  login.py  main.py
src-tauri/src-tauri/: tauri.conf.json
src/components/: AddCourse.vue  UpdateProgress.vue  UserDashboard.vue  UserLogin.vue  UserRegister.vue
src/router/: index.js
src/utils/: db.js
ui/: app.py
