# pyproject.toml
[tool.poetry]
name = "budget_app"
version = "0.1.0"
description = "A simple budgeting application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
PyQt6 = "^6.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
commitizen = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
version_provider = "poetry"
version_scheme = "semver"
version_files = [
    "pyproject.toml:version",
    "src/__init__.py:__version__"
]
tag_format = "v$version"
bump_message = "bump: $current_version -> $new_version"
